--- a/estilo.css
+++ b/estilo.css
@@ -2,9 +2,21 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
+
+:root{
+    --azul-dnc: #0C70F2;
+    --preto-dnc: #303030;
+    --cinza-hover: #C9C9C9;
+
+    --font-padrao: 'Inter';
+}
+
         body{
             margin: 0px; /*Margem Externa */
             padding: 0px; /*Margem Interna */
+
+            background: linear-gradient(180deg, rgba(12, 112, 242, 0.5) 19.91%, rgba(12, 112, 242, 0) 24.84%), #303030;
+            background-repeat: no-repeat;
         }
 
         /*MENU DE NAVEGAÇÃO PRINCIPAL*/
@@ -12,7 +24,7 @@
             width: 100%;
             height: 100px;
             border: 1px solid black;
-            background-color: #303030;
+            background-color: var(--preto-dnc);
 
             display: flex;
             justify-content: space-between;
@@ -30,7 +42,7 @@
 
         /*Caracteristicas dos links do menu */
         #principal div a {
-            font-family: 'Inter';
+            font-family: var(--font-padrao);
             font-size: 25px;
             font-weight: 600;
             color: white;
@@ -44,15 +56,114 @@
         /*Caracteristicas do botão de iniciar */    
         #principal button{
             margin-right: 5%;
-            background-color: #0C70F2;
+            background-color: var(--azul-dnc);
             border: 0px;
 
             height: 40px;
             width: 80px;
-            font-family: 'Inter';
+            font-family: var(--font-padrao);
             font-size: 20px;
             font-weight: 600;
             color: white;
             box-shadow: 3px 2px 4px rgba(12, 112, 242, 0.25);
+            cursor: pointer;
+        }
+
+
+   /*Sessão principal do site */
+
+    section{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        margin-top: 100px;
+        margin-bottom: 100px;
+    }
+        /*padrão corpo do site */
+        header{
+            color: white;
+            font-family: var(--font-padrao);
+        }
+
+        /*BOOTCAMP DNC */
+        header h1{
+            font-size: 80px;
+            font-weight: 800;
+            text-align: center;
+            margin-bottom: 2px;
+        }
+
+        /*Texto do bootcamp */
+        header h2{
+            text-align: center;
+            font-size: 40px;
+            font-weight: 700;
+            margin-bottom: 100px;
+        }
+ 
+        /*parte do texto destacado com fundo preto*/
+        header .invert{
+            background-color: black;
+            font-weight: bold;
+            padding: 5px;
+        }
+
+        /*FORMULARIO*/
+        form{
+            color:white;
+            font-family: var(--font-padrao);
+            font-size: 30px;
+            font-weight: 600;
+            width: 600px;
+        }
+
+        .form-group{
+            display: flex;
+            flex-direction: column;
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
+
+        form input{
+            border-radius: 10px;
+            height: 30px;
+            border: 0px;
+            font-size: 20px;
+            padding: 10px;
+            background-color: rgba(255, 255, 255, 0.9);
+        }
+
+        form label{
+            margin: 10px 0px 10px 0px;
+        }
+
+        form input::placeholder{
+            color:rgba(57, 57, 57, 0.5);
+        }
+
+        .checkbox-itens label{
+            font-size: 25px;
+        }
+
+        .checkbox-itens{
+            display:flex;
+            justify-content: space-around;
+            align-items: center;
+        }
+
+        /*Tamanho do checkbox*/
+        input[type="checkbox"]{
+            transform: scale(1.7)
+        }
+
+        input[type="submit"]{
+            background-color: rgba(12, 112, 242, 0.9);
+            width: 100%;
+            height: 56px;
+            font-size: 32px;
+            color: white;
+            box-shadow: 0px 6px 4px rgba(12, 112, 242, 0.25);
+            margin-top: 100px;
             cursor: pointer;
         }
